--- a/index.html
+++ b/index.html
@@ -11,10 +11,23 @@
         canvas {
             width: 100%;
         }
+
+        @font-face {
+          font-family: 'CurseCasual';
+          src: url('assets/fonts/CurseCasual.ttf');
+        }
+        /* предзагрузка шрифта */
+        .fontPreload {
+          font-family: 'CurseCasual';
+          position: absolute;
+          left: -100px;
+        }
     </style>
   </head>
 
   <body>
+    <div class="fontPreload">.</div> <!-- предзагрузка шрифта -->
+
     <script src="assets/scripts/phaser.js"></script>
     <script src="assets/scripts/Card.js"></script>
     <script src="assets/scripts/GameScene.js"></script>
